<resources>
    <string name="app_name">Profil P2SKP Bulu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profil">Unit Pelaksana Teknis Pelabuhan Perikanan (UPT PP) Bulu-Tuban merupakan UPT Dinas Perikanan dan Kelautan Provinsi Jawa Timur, yang pada awalnya pada tahun 1985 adalah Pilot Proyek Pemasaran Ikan Basah (PPPIB) Jawa Timur yang merupakan proyek bantuan dari MEE. Kemudian pada tahun 1993 dihibahkan oleh MEE kepada Dinas Perikanan Daerah Tingkat I Jawa Timur dan berganti nama menjadi Badan Pengelola Pangkalan Pendaratan Ikan (BP.PPI) Bulu berdasarkan Surat Keputusan Kepala Dinas Perikanan Daerah Tingkat I Propinsi Jawa Timur Nomor 27 Tahun 1993 tanggal 14 April 1993. Dan pada tahun 2010 berganti nama menjadi Unit Pengelola Pangkalan Pendaratan Ikan (UPPPI) Bulu berdasarkan Surat Keputusan Kepala Dinas Perikanan dan Kelautan Provinsi Jawa tImur Nomor : 061/66140/116.01/2010 tanggal 30 April 2010. Sesuai dengan Peraturan Gubernur Jawa Timur Nomor 31 tahun 2014 tanggal 23 Mei 2014 tentang organisasi dan Tata Kerja Unit Pelaksana Teknis Dinas Perikanan dan Kelautan Provinsi Jawa Timur maka berganti nama menjadi Unit Pelaksana Teknis Pelabuhan Perikanan (UPT PP) Bulu-Tuban. UPT Pelabuhan Perikanan Bulu-Tuban berada di Jl. Raya Tuban-Semarang km 45 Desa Bulu Meduro,Kecamatan Bancar, Kabupaten Tuban dengan posisi koordinat 06°45´11´´LS dan 111°32´52´´BT , dan posisi geografis yang berjarak 145 km dari ibukota provinsi Jawa Timur, 45 km dari kota kabupaten,8 km dari kota kecamatan sangat strategis sebagai Pelabuhan Perikanan karena letaknya dekat dengan jalan raya Pantura sehingga dalam melaksanakan kegiatan transportasi mudah terjangkau. UPT Pelabuhan Perikanan Bulu-Tuban sebagai Unit Pelaksana Teknis Dinas Perikanan dan Kelautan Provinsi Jawa Timur diharapkan menjadi pusat kegiatan produksi, pemasaran, pengelolaan hasil perikanan serta mampu mengadakan pembinaan intensif terhadap usaha perikanan dan pembinaan masyarakat perikanan pada umumnya, sehingga UPT Pelabuhan Perikanan Bulu dapat menunjang tercapainya pembangunan perikanan tangkap dan menumbuhkembangkan perekonomian masyarakat secara berkesinambungan.</string>
    <string name="kembali">Kembali</string>
    <string name="title_activity_kata_pengantar">Kata Pengantar</string>
    <string name="title_activity_visi_misi">Visi Misi</string>
    <string name="profil_p2skp_bulu">PROFIL P2SKP BULU</string>
    <string name="profil_pelabuhan">Profil Pelabuhan</string>
    <string name="fasilitas_pelabuhan">Fasilitas Pelabuhan</string>
    <string name="struktur_organisasi">Struktur Organisasi</string>
    <string name="produksi_ikan">Produksi Ikan</string>
    <string name="prakiraan_cuaca">Prakiraan Cuaca</string>
    <string name="profil1">Profil</string>
    <string name="kata_pengantar">Kata Pengantar</string>
    <string name="visi_misi">Visi Misi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="keluar">Keluar</string>
    <string name="profil_p2skp_bulu1">Profil P2SKP Bulu</string>
    <string name="ppi_bulu_gmail_com">ppi.bulu@gmail.com</string>
    <string name="title_activity_tentang_aplikasi">Tentang Aplikasi</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="dibuat_oleh_plk_developer">Dibuat Oleh : PLK Developer</string>
    <string name="sumberdaya_kelautan_dan_perikanan_bulu_tuban">Sumberdaya Kelautan dan Perikanan Bulu - Tuban</string>
    <string name="unit_pelaksana_teknis">Unit Pelaksana Teknis</string>
    <string name="upt_p2skp_bulu">UPT P2SKP BULU</string>
    <string name="email_ppi_bulu_gmail_com">email : ppi.bulu@gmail.com</string>
    <string name="website_ppbulutuban_blogspot_co_id">website : ppbulutuban.blogspot.co.id</string>
    <string name="title_activity_kepala_upt">Kepala UPT</string>
    <string name="kepala_upt">Kepala UPT</string>
    <string name="nip_xxxxxxxxxxxxxx">NIP. xxxxxxxxxxxxxx</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kepala_upt_pelabuhan">Kepala UPT Pelabuhan</string>
    <string name="berita_pipp">Berita PIPP</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="produksi_ikanq">Produksi Ikan</string>
    <string name="profil_pelabuhanw">Profil Pelabuhan</string>
    <string name="struktur">Struktur</string>
    <string name="title_activity_fasilitas_pelabuhan">FasilitasPelabuhan</string>
    <string name="title_activity_kepegawaian">Kepegawaian</string>
    <string name="title_activity_produksi_ikan">Produksi Ikan</string>
    <string name="title_activity_berita_pipp">Berita PIPP</string>
    <string name="fasilitas_pokok_upt_p2skp_bulu">Fasilitas Pokok UPT P2SKP BULU</string>
    <string name="fasilitas_fungsional">Fasilitas Fungsional</string>
    <string name="fasilitas_penunjang_pelabuhan">Fasilitas Penunjang Pelabuhan</string>
    <string name="fasilitas_pokok">Fasilitas Pokok</string>
    <string name="fasilitas_fungsional1">Fasilitas Fungsional</string>
    <string name="fasilitas_penunjang">Fasilitas Penunjang</string>
    <string name="menu_1">fasilitas</string>
    <string name="kepegawaian">Kepegawaian</string>
    <string name="title_activity_menu_utama2">P2SKP BULU</string>
    <string name="prakiraan_cuaca1">Prakiraan Cuaca</string>
    <string name="title_activity_prakiraan_cuaca">PrakiraanCuaca</string>
    <string name="keluar_aplikasi">Keluar Aplikasi</string>
    <string name="tentang_aplikasi1">Tentang Aplikasi</string>
    <string name="upt_ppp_bulu">UPT PPP BULU</string>
</resources>
