<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/radiobutton_off_background"
            android:title="@string/kata_pengantar" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/radiobutton_off_background"
            android:title="@string/profil1" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/radiobutton_off_background"
            android:title="@string/tentang_aplikasi" />

        <item
            android:id="@+id/Keluar"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/keluar" />
    </group>

</menu>
